<resources>
    <string name="app_name">LetMeBreathe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="classroom">Classroom</string>
    <string name="temperature">Temperature</string>
    <string name="co2">CO2</string>
    <string name="settings">Settings</string>
    <string name="edit_account">Edit account</string>
    <string name="all_classrooms">All classrooms</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="confirm_password">Confirm password</string>
    <string name="delete_account">Delete account</string>
    <string name="save">Save</string>
    <string name="second">second</string>

    <string name="third">Third</string>
    <string name="logout">Log out</string>
    <string name="create_account">Create account</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="all_users">All users</string>
    <string name="admin">Admin</string>
</resources>
