<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.example.letmebreathe.viewModels.AdminEditTeacherAccountViewModel" />


    </data>

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout_admin_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left">

                    <android.support.design.widget.AppBarLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar_admin_edit_teacher"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:minHeight="?attr/actionBarSize"
                            android:theme="@style/AppTheme"
                            app:title="Edit teacher account"
                            app:titleTextColor="@android:color/white" />
                    </android.support.design.widget.AppBarLayout>
                </RelativeLayout>


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    tools:context=".View.TeacherEditAccountActivity">




                    <TextView
                        android:id="@+id/editUsername"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="100dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border2"
                        android:focusableInTouchMode="false"
                        android:hint="@string/username"
                        android:padding="15dp"
                        android:text="@{data.account.userName}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />


                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/lightblue"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={data.account.password}"
                        android:textAlignment="center" />


                    <EditText
                        android:id="@+id/editPasswordConfirm"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/lightblue"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:text="@={data.account.passwordToConfirm}"
                        android:textAlignment="center" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:checked="@={data.account.admin}"
                        android:text="@string/admin"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="100dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/deleteAccountButton"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="50dp"
                            android:background="@color/lightblue"
                            android:onClick="@{(view) -> data.showConfirmDeleteWindow()}"
                            android:text="@string/delete_account" />

                        <Button
                            android:id="@+id/saveAccountButton"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@color/lightblue"
                            android:onClick="@{(view) -> data.updateAccount()}"
                            android:text="@string/save" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>
        </ScrollView>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_admin_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu_admin" />


    </android.support.v4.widget.DrawerLayout>


</layout>