<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.example.letmebreathe.viewModels.CheckEnvironmentalDataViewModel" />


    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".CheckEnvironmentalDataActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/classroom"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@{data.clasroom}"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/co2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@{String.valueOf(data.temperature)}"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@{String.valueOf(data.CO2)}"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</layout>